Correction IHM + ajout fonctions ownStat

--- a/src/app/home-pannel-page/convs-pannel/one-conv-stats/overview-stat/overview-stat.component.html
+++ b/src/app/home-pannel-page/convs-pannel/one-conv-stats/overview-stat/overview-stat.component.html
@@ -21,7 +21,7 @@
         <div class="infoBox">
           <img src="https://image.flaticon.com/icons/svg/1356/1356271.svg"/>
           <p>Date création</p>
-          <h5>{{dateCreationConv| date:'medium'}}</h5>
+          <h5>{{dateCreationConv| date:'short'}}</h5>
         </div>
       </div>
 
