--- a/src/app/home-pannel-page/own-stats-pannel/own-stats-pannel.component.scss
+++ b/src/app/home-pannel-page/own-stats-pannel/own-stats-pannel.component.scss
@@ -236,9 +236,11 @@ img {
 }
 
 .descriptionBox{
-  text-align : center;
-  height:7vw;
-  font-size : 1em;
+  text-align: center;
+  width: 80%;
+  margin: auto;
+  margin-bottom: 1vh;
+  font-size: 1em;
 }
 
 hr.overview{
