--- a/src/app/file-drop-page/file-drop-page.component.html
+++ b/src/app/file-drop-page/file-drop-page.component.html
@@ -122,9 +122,6 @@
       <p style="text-align:right; margin-top:2%; margin-bottom:1%; margin-right:3%">L'équipe StatMess</p>
     </div>
   </div>
-        <svg class="modal-svg" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" preserveAspectRatio="none">
-        <rect x="0" y="0" fill="none" width="226" height="162" rx="3" ry="3"></rect>
-        </svg>
       </div>
     </div>
   </div>
@@ -166,7 +163,7 @@
 
   <div class="compteur">
     <img src="https://image.flaticon.com/icons/svg/69/69379.svg"/>
-    <p>Cette page a été visitée 152 fois</p>
+    <p>Cette page a été visitée <b>{{nbrVisite}}</b> fois</p>
   </div>
 </div>
 
