Retour à la normale

--- a/src/app/home-pannel-page/own-stats-pannel/own-stats-pannel.component.html
+++ b/src/app/home-pannel-page/own-stats-pannel/own-stats-pannel.component.html
@@ -324,7 +324,7 @@
       <hr class="messageTitle">
       <h4>StatMess vous suggère</h4>
       <div class="suggestBestContact">
-        <img class = "imgDestinataire" src="https://image.flaticon.com/icons/svg/1256/1256650.svg"/>
+        <img class = "imgIcon" src="https://image.flaticon.com/icons/svg/1256/1256650.svg"/>
         <h4 style="color:black;padding-left: 1vh; padding-right: 1vh;">{{suggestBestContact[0].name}}</h4>
       </div>
       <div class="suggestBestContactInfo">
@@ -356,7 +356,7 @@
       <button class="buttonRandomContact" *ngIf="isHide['randomContact']" mat-button (click)="invertHide('randomContact')">Générer votre contact inconnu</button>
       <div class="suggestRandomContactHide" *ngIf="!isHide['randomContact']">
         <div class="randomContact">
-          <img class = "imgDestinataire" src="https://image.flaticon.com/icons/svg/1256/1256650.svg"/>
+          <img class = "imgIcon" src="https://image.flaticon.com/icons/svg/1256/1256650.svg"/>
           <h4 style="color:black; padding-left: 1vh; padding-right: 1vh;">{{suggestRandomContact}}</h4>
         </div>
         <h4>Quel sera ton message ?</h4>
