Correction nbr de visite

--- a/src/app/file-drop-page/file-drop-page.component.html
+++ b/src/app/file-drop-page/file-drop-page.component.html
@@ -163,7 +163,7 @@
 
   <div class="compteur">
     <img src="https://image.flaticon.com/icons/svg/69/69379.svg"/>
-    <p>Cette page a été visitée 152 fois</p>
+    <p>Cette page a été visitée {{nbrVisite}} fois</p>
   </div>
 </div>
 
