Correction problème bubble

--- a/src/app/home-pannel-page/own-stats-pannel/own-stats-pannel.component.html
+++ b/src/app/home-pannel-page/own-stats-pannel/own-stats-pannel.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="!isFileOpen">
+<div [ngStyle]="{'display':isFileOpen ? 'None' : 'Block' }">
   <h1 style="text-align:center;">Vos statistiques</h1>
   <hr class="overview">
   <div class="kpiOverview">
