--- a/src/app/home-pannel-page/convs-pannel/one-conv-stats/overview-stat/overview-stat.component.css
+++ b/src/app/home-pannel-page/convs-pannel/one-conv-stats/overview-stat/overview-stat.component.css
@@ -110,6 +110,10 @@ h2 {
   font-size : 100px;
 }
 
+.threeCardsSmiley h1{
+  margin-bottom:1%;
+}
+
 .threeCardsText{
   height : 50%;
   width : 100%;
