--- a/src/app/home-pannel-page/convs-pannel/one-conv-stats/overview-stat/overview-stat.component.html
+++ b/src/app/home-pannel-page/convs-pannel/one-conv-stats/overview-stat/overview-stat.component.html
@@ -72,7 +72,7 @@
           <p style="margin-left:10%; margin-bottom:0; margin-top:0; font-size:50%;">- Ratio réactions reçues / réactions envoyées</p>
           <h4 style="font-size:50%;">Il se peut que les résultats ne soient pas proches de la réalité, le résultat n'est pas à prendre au serieux</h4>
         </div>
-        <div *ngIf="influenceUserChart" class="card-body p-1 m-0" style="position: relative; height: 80%;">
+        <div *ngIf="influenceUserChart" class="card-body p-1 m-0" style="position: relative; padding-top:4.5%; height: 80%;">
           <canvas class="statChart" #influenceUserGraph id="graphInfluencer">{{ influenceUserChart }}</canvas>
         </div>
       </div>
