--- a/src/app/home-pannel-page/home-pannel-page.component.html
+++ b/src/app/home-pannel-page/home-pannel-page.component.html
@@ -41,7 +41,7 @@
       </div>
     </div>
     <figcaption>
-      <p>Which is worse, that everyone has his price, or that the price is always so low.</p>
+      <p>Analysez vos statistiques personnelles sur tous vos messages.</p>
     </figcaption>
     <a href="#"></a>
     </figure>
@@ -54,7 +54,7 @@
       </div>
     </div>
     <figcaption>
-      <p>Which is worse, that everyone has his price, or that the price is always so low.</p>
+      <p>Analyser chacune de vos conversations en détail.</p>
     </figcaption>
     <a href="#"></a>
     </figure>
@@ -67,7 +67,7 @@
       </div>
     </div>
     <figcaption>
-      <p>Which is worse, that everyone has his price, or that the price is always so low.</p>
+      <p>Déterminez votre profil Messenger.</p>
     </figcaption>
     <a href="#"></a>
     </figure>
