--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,11 +3,11 @@
       <div class="cover">
          <div class="button-container-2" (click)="launch()">
           <span class="mas">
-            <h1 class="launchText">Statsmess</h1>
+            <h1 class="launchText">StatMess</h1>
             <p>Lancez vous</p>
           </span>
           <button type="button" name="Hover" >
-            <h1 class="launchText">Statsmess</h1>
+            <h1 class="launchText">StatMess</h1>
             <p>Lancez vous</p>
           </button>
         </div>
@@ -17,7 +17,7 @@
     <div *ngIf="isReady">
       <div class="horizontalBar">
         <img src="https://i.pinimg.com/originals/0b/73/51/0b7351f7b132512ea28fae9d5fff1bde.png"/>
-        <h1>StatsMess</h1>
+        <h1>StatMess</h1>
       </div>
       <div class="cguPage" *ngIf="isCguVisible">
         <div class="wrapper" (click)="showHideCgu()">
