--- a/src/app/home-pannel-page/profil-pannel/slider-perso/slider-perso.component.scss
+++ b/src/app/home-pannel-page/profil-pannel/slider-perso/slider-perso.component.scss
@@ -49,7 +49,6 @@ mat-slider {
 .oneSlider p {
   width: 11%;
   text-align: center;
-  font-family: Brush Script MT, Brush Script Std, cursive;
   background-color: #212F3D;
   border-radius: 30px;
   color: white;
@@ -113,7 +112,7 @@ mat-slider {
 }
 
 //Couleur des dot
-::ng-deep .sliderLeft .igx-slider--disabled .igx-slider__thumb-from .dot,{
+::ng-deep .sliderLeft .igx-slider--disabled .igx-slider__thumb-from .dot{
   background:blue;
 }
 
