--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,7 @@
             <p>Lancez vous</p>
           </button>
         </div>
+        <h2 class="version">Version α</h2>
       </div>
     </div>
 
