--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -330,3 +330,10 @@ $ease: cubic-bezier(.2,1,.3,1);
   cursor:pointer;
   
 }
+
+.version{
+  position: relative;
+  top: 30vh;
+  margin-left: 100px;
+  font-size: -webkit-xxx-large;
+}
