--- a/src/app/home-pannel-page/own-stats-pannel/own-stats-pannel.component.html
+++ b/src/app/home-pannel-page/own-stats-pannel/own-stats-pannel.component.html
@@ -329,12 +329,12 @@
       </div>
       <div class="suggestBestContactInfo">
         <div id="nbrMessageSuggestBestContact"  >
-          <img class = "imgIcon" src="https://image.flaticon.com/icons/svg/149/149063.svg"/>
+          <img class = "imgIcon" style="height:35%;" src="https://image.flaticon.com/icons/svg/149/149063.svg"/>
           <h5>Nombre de messages</h5>
           <h4>{{suggestBestContact[0].nbrMessage}}</h4>
         </div>
         <div id="lastDateSuggestBestContact">
-          <img class = "imgIcon" src="https://image.flaticon.com/icons/svg/148/148977.svg"/>
+          <img class = "imgIcon" style="height:35%;" src="https://image.flaticon.com/icons/svg/148/148977.svg"/>
           <h5>Dernier message</h5>
           <h4>{{suggestBestContact[1]| date:'medium'}}</h4>
         </div>
