--- a/src/app/home-pannel-page/own-stats-pannel/own-stats-pannel.component.scss
+++ b/src/app/home-pannel-page/own-stats-pannel/own-stats-pannel.component.scss
@@ -480,17 +480,13 @@ h2 {
   text-align: center;
 }
 
-<<<<<<< .mine
-
-
-
-
-=======
-
 .imgDestinataire{
   height: 45%;
 }
->>>>>>> .theirs
+
+.imgIcon{
+  height:12%;
+}
 
 .imgDate{
   height : 35%;
