Tootltip all pages bug conv

--- a/src/app/home-pannel-page/convs-pannel/one-conv-stats/one-conv-stats.component.html
+++ b/src/app/home-pannel-page/convs-pannel/one-conv-stats/one-conv-stats.component.html
@@ -1,3 +1,15 @@
+<div class="tooltipFirstRun" [ngStyle]="{'display':isOneConvStatFirstRun? 'Block' : 'None' }">
+    <div class="enteteTooltip">
+      <h1>Statistiques globales de votre profil</h1>
+      <div class="close-container" (click)="closeTooltip()">
+        <div class="leftright"></div>
+        <div class="rightleft"></div>
+        <label class="close">close</label>
+      </div>
+    </div>
+    <p>Ipsam vero urbem Byzantiorum fuisse refertissimam atque ornatissimam signis quis ignorat? Quae illi, exhausti sumptibus bellisque maximis, cum omnis Mithridaticos impetus totumque Pontum armatum affervescentem in Asiam atque erumpentem, ore repulsum et cervicibus interclusum suis sustinerent, tum, inquam, Byzantii et postea signa illa et reliqua urbis ornanemta sanctissime custodita tenuerunt.</p>
+  </div>
+
 <div class="main">
   <div class="sideBar">
 
