--- a/src/app/home-pannel-page/own-stats-pannel/own-stats-pannel.component.html
+++ b/src/app/home-pannel-page/own-stats-pannel/own-stats-pannel.component.html
@@ -12,7 +12,7 @@
     
   </div>
 
-  <h1 style="text-align:center;" class="reajustContent" id="title">Vos statistiques</h1>
+  <h1 style="text-align:center;">Vos statistiques</h1>
   <hr class="overview">
   <div class="kpiOverview">
     <p class="subTitleOverview">14 nombres pour vous décrire</p>
