--- a/src/app/home-pannel-page/own-stats-pannel/own-stats-pannel.component.scss
+++ b/src/app/home-pannel-page/own-stats-pannel/own-stats-pannel.component.scss
@@ -935,12 +935,9 @@ label{
   transition-property: opacity;
   transition-duration: 1s;
   transition-timing-function: linear;
+  margin-bottom:-11%;
 }
 
 .enteteTooltip h1{
   width:90%
-}
-
-.reajustContent{
-  margin-top: -18vh;
 }
