--- a/src/app/home-pannel-page/convs-pannel/one-conv-stats/autres-stat/autres-stat.component.html
+++ b/src/app/home-pannel-page/convs-pannel/one-conv-stats/autres-stat/autres-stat.component.html
@@ -51,7 +51,7 @@
       <div class="explication" id="book">
         <div class="infoBox" id="infoBoxBook">
           <img src="https://image.flaticon.com/icons/svg/167/167756.svg"/>
-          <p>Livre équivalent de la conversation</p>
+          <p style="margin-top: 1%;">Livre équivalent de la conversation</p>
         </div>
         <h5>{{bookStat['book']}}</h5>
       </div>
