--- a/src/app/home-pannel-page/convs-pannel/one-conv-stats/overview-stat/overview-stat.component.html
+++ b/src/app/home-pannel-page/convs-pannel/one-conv-stats/overview-stat/overview-stat.component.html
@@ -26,33 +26,54 @@
       </div>
 
     <div class="totalThreeCards">
-      <div class="threeCards freezeCard">
-        <div class="img"></div>
-        <div class="threeCardsSmiley">
-          <h1>{{freezeSmiley}}</h1>
+      <div>
+        <div class="threeCards freezeCard">
+          <div class="img"></div>
+          <div class="threeCardsSmiley">
+            <h1>{{freezeSmiley}}</h1>
+          </div>
+          <div class="threeCardsText">
+            <p>{{maxFreeze}}</p>
+          </div>
         </div>
-        <div class="threeCardsText">
-          <p>{{maxFreeze}}</p>
-        </div>
-      </div>
-      <div class="threeCards fireCard">
-        <div class="img"></div>
-        <div class="threeCardsSmiley">
-          <h1>{{currentStreakSmiley}}</h1>
-        </div>
-        <div class="threeCardsText">
-          <p>{{currentStreak}}</p>
+        <div style="display:flex; height:8vh; padding-left: 2%;">
+            <img style="width: 2vw; height: 2vh; margin-left:0; margin-right: -8%;" src="https://image.flaticon.com/icons/svg/131/131917.svg"/>
+            <h5 style="margin-top:0;font-style: italic; color:#BFBFBF;width: 15vw;">Nombre maximum de jours sans parler</h5>
         </div>
       </div>
-      <div class="threeCards streakCard">
-        <div class="img"></div>
-        <div class="threeCardsSmiley">
-          <h1>{{maxStreakSmiley}}</h1>
+
+      <div>
+        <div class="threeCards fireCard">
+          <div class="img"></div>
+          <div class="threeCardsSmiley">
+            <h1>{{currentStreakSmiley}}</h1>
+          </div>
+          <div class="threeCardsText">
+            <p>{{currentStreak}}</p>
+          </div>
         </div>
-        <div class="threeCardsText">
-          <p>{{maxStreak}}</p>
-        </div>
+        <div style="display:flex; height:8vh; padding-left: 2%;">
+            <img style="width: 2vw; height: 2vh; margin-left:0; margin-right: -8%;" src="https://image.flaticon.com/icons/svg/131/131917.svg"/>
+            <h5 style="margin-top:0;font-style: italic; color:#BFBFBF;width: 15vw;">Nombre de jours d'affilés pendant lesquels vous avez parlé à partir de maintenant</h5>
+          </div>
       </div>
+
+      <div>
+        <div class="threeCards streakCard">
+          <div class="img"></div>
+          <div class="threeCardsSmiley">
+            <h1>{{maxStreakSmiley}}</h1>
+          </div>
+          <div class="threeCardsText">
+            <p>{{maxStreak}}</p>
+          </div>
+        </div>
+        <div style="display:flex; height:8vh; padding-left: 2%;">
+            <img style="width: 2vw; height: 2vh; margin-left:0; margin-right: -8%;" src="https://image.flaticon.com/icons/svg/131/131917.svg"/>
+            <h5 style="margin-top:0;font-style: italic; color:#BFBFBF;width: 15vw;">Nombre maximum de jours d'affilés pendant lesquels vous avez parlé</h5>
+          </div>
+      </div>
+
     </div>
   </div>
  </div>
