--- a/src/app/home-pannel-page/convs-pannel/one-conv-stats/overview-stat/overview-stat.component.css
+++ b/src/app/home-pannel-page/convs-pannel/one-conv-stats/overview-stat/overview-stat.component.css
@@ -81,10 +81,10 @@ h2 {
   display:flex;
   justify-content: center;
   width : 80%;
-  height:25%;
+  height:20%;
   padding-right:10%;
   padding-left:10%;
-  padding-top:2.5%;
+  padding-top: 1.5%;
 }
 
 .threeCards {
@@ -115,8 +115,11 @@ h2 {
 }
 
 .threeCardsText{
-  height : 50%;
   width : 100%;
+}
+
+.threeCardsText p{
+  margin-bottom:0;
 }
 
 .freezeCard .img{
