--- a/src/app/cgu/cgu.component.html
+++ b/src/app/cgu/cgu.component.html
@@ -84,7 +84,7 @@
   En vertu des articles 39 et 40 de la loi en date du 6 janvier 1978, l'Utilisateur dispose d'un droit d'accès, de rectification, de suppression et d'opposition de ses données personnelles. L'Utilisateur exerce ce droit via :</p>
   
   <p>•   Un formulaire de contact ;</p>
-  <p>•   Par mail à paul.wolf@centrale-marseille.fr ;</p>
+  <p>•   Par mail à statmess@gmail.com ;</p>
   <p>•   Par voie postale au 1 Place Sadi-Carnot 13002 Marseille.</p>
   
   
