--- a/src/app/home-pannel-page/convs-pannel/convs-pannel.component.scss
+++ b/src/app/home-pannel-page/convs-pannel/convs-pannel.component.scss
@@ -573,7 +573,7 @@ $mediumblu: #1E272D;
   transition: all .3s ease-in;
 }
 
-label{
+.close label{
   color: white;
   font-family: Helvetica, Arial, sans-serif; 
   font-size: .6em;
