--- a/src/app/home-pannel-page/own-stats-pannel/own-stats-pannel.component.html
+++ b/src/app/home-pannel-page/own-stats-pannel/own-stats-pannel.component.html
@@ -8,8 +8,8 @@
         <label class="close">close</label>
       </div>
     </div>
-    <p>Ipsam vero urbem Byzantiorum fuisse refertissimam atque ornatissimam signis quis ignorat? Quae illi, exhausti sumptibus bellisque maximis, cum omnis Mithridaticos impetus totumque Pontum armatum affervescentem in Asiam atque erumpentem, ore repulsum et cervicibus interclusum suis sustinerent, tum, inquam, Byzantii et postea signa illa et reliqua urbis ornanemta sanctissime custodita tenuerunt.</p>
-    
+    <p style="font-size: 1.3em;">- Retrouvez ici les informations concernant votre activité sur toutes vos conversations.</p>
+    <p style="margin-top:2%; font-size: 1.3em;">- Si vous ne comprenez pas un graphique, cliquez sur le <img style="height:4vh;" src="https://image.flaticon.com/icons/svg/254/254059.svg"/> pour avoir plus d'informations.</p>
   </div>
 
   <h1 style="text-align:center;">Vos statistiques</h1>
