style final de la journée

--- a/src/app/home-pannel-page/home-pannel-page.component.html
+++ b/src/app/home-pannel-page/home-pannel-page.component.html
@@ -47,7 +47,7 @@
 
   <div class="tPannel">
     <figure class="snip1477" (click)="switchPannel('ownStats')">
-      <img src="https://image.flaticon.com/icons/svg/417/417751.svg" />
+      <img src="https://image.flaticon.com/icons/svg/609/609120.svg" />
     <div class="title">
       <div>
         <h4>Stats globales</h4>
@@ -60,23 +60,23 @@
     </figure>
 
     <figure class="snip1477" (click)="switchPannel('statsConv')">
-      <img src="https://image.flaticon.com/icons/svg/1000/1000384.svg" />
+      <img src="https://image.flaticon.com/icons/svg/608/608968.svg" />
     <div class="title">
       <div>
         <h4>Conversations</h4>
       </div>
     </div>
     <figcaption>
-      <p>Analyser chacune de vos conversations en détail.</p>
+      <p>Analysez chacune de vos conversations en détail.</p>
     </figcaption>
     <a href="#"></a>
     </figure>
 
     <figure class="snip1477" (click)="switchPannel('profil')">
-      <img src="https://image.flaticon.com/icons/svg/1283/1283201.svg" />
+      <img src="https://image.flaticon.com/icons/svg/417/417776.svg" />
     <div class="title">
       <div>
-        <h4>Profil</h4>
+        <h4>Profil Messenger</h4>
       </div>
     </div>
     <figcaption>
