--- a/src/app/home-pannel-page/home-pannel-page.component.scss
+++ b/src/app/home-pannel-page/home-pannel-page.component.scss
@@ -86,7 +86,7 @@ figure.snip1477 {
   margin: 10px;
   min-width: 230px;
   width: 100%;
-  color: #000000;
+  color: #1A1837;
   text-align: center;
   font-size: 16px;
   background-color: white;
@@ -120,7 +120,7 @@ figure.snip1477 .title:after {
   width: 400px;
   position: absolute;
   content: '';
-  background-color: #000000;
+  background-color: rgb(250, 138, 47);
 }
 figure.snip1477 .title:before {
   top: 0;
@@ -140,7 +140,7 @@ figure.snip1477 .title div:after {
   height: 300px;
   position: absolute;
   content: '';
-  background-color: #000000;
+  background-color: rgb(250, 138, 47);
 }
 figure.snip1477 .title div:before {
   top: 10px;
@@ -165,7 +165,7 @@ figure.snip1477 h2 {
 figure.snip1477 h4 {
   display: block;
   font-weight: 700;
-  background-color: #000000;
+  background-color: rgb(250, 138, 47);
   padding: 5px 10px;
   color: #ffffff;
 }
