--- a/src/app/home-pannel-page/profil-pannel/profil-pannel.component.html
+++ b/src/app/home-pannel-page/profil-pannel/profil-pannel.component.html
@@ -1,13 +1,14 @@
 <div class="tooltipFirstRun" [ngStyle]="{'display':isProfilFirstRun? 'Block' : 'None' }">
   <div class="enteteTooltip">
-    <h1>Statistiques globales de votre profil</h1>
+    <h1>Mon profil Messenger</h1>
     <div class="close-container" (click)="closeTooltip()">
       <div class="leftright"></div>
       <div class="rightleft"></div>
       <label class="close">close</label>
     </div>
   </div>
-  <p>Ipsam vero urbem Byzantiorum fuisse refertissimam atque ornatissimam signis quis ignorat? Quae illi, exhausti sumptibus bellisque maximis, cum omnis Mithridaticos impetus totumque Pontum armatum affervescentem in Asiam atque erumpentem, ore repulsum et cervicibus interclusum suis sustinerent, tum, inquam, Byzantii et postea signa illa et reliqua urbis ornanemta sanctissime custodita tenuerunt.</p>
+  <p style="font-size:1.3em; margin-top:1%;">- Découvrez votre profil Messenger à travers <b style="color:rgb(250, 138, 47); font-style:unset;">une description</b> et <b style="color:rgb(250, 138, 47); font-style:unset;">des curseurs</b>.</p>
+  <p style="font-size:1.3em; margin-top:1%;">- Si vous voulez plus d'information sur les curseurs cliquez sur le bouton d'information placé à leur droite.</p>
 </div>
 
 <div class="mainProfil" *ngIf="profilUser==='INTP'">
