--- a/src/app/home-pannel-page/convs-pannel/convs-pannel.component.html
+++ b/src/app/home-pannel-page/convs-pannel/convs-pannel.component.html
@@ -1,14 +1,18 @@
 <div class="navigateur" *ngIf="!isStats">
   <div class="tooltipFirstRun" [ngStyle]="{'display':isConvStatFirstRun? 'Block' : 'None' }">
     <div class="enteteTooltip">
-      <h1>Statistiques globales de votre profil</h1>
+      <h1>Mes conversations</h1>
       <div class="close-container" (click)="closeTooltip()">
         <div class="leftright"></div>
         <div class="rightleft"></div>
         <label class="close">close</label>
       </div>
     </div>
-    <p>Ipsam vero urbem Byzantiorum fuisse refertissimam atque ornatissimam signis quis ignorat? Quae illi, exhausti sumptibus bellisque maximis, cum omnis Mithridaticos impetus totumque Pontum armatum affervescentem in Asiam atque erumpentem, ore repulsum et cervicibus interclusum suis sustinerent, tum, inquam, Byzantii et postea signa illa et reliqua urbis ornanemta sanctissime custodita tenuerunt.</p>
+    <p style="font-size:1.4em;">Retrouvez ici toutes vos conversations Messenger</p>
+    <p style="font-size:1.3em; margin-top:5%;">- Vous pouvez <b style="color:rgb(250, 138, 47)">cliquer sur une conversation</b> pour l'analyser en détail.</p>
+    <p style="font-size:1.3em; margin-top:1%;">- Vous pouvez <b style="color:rgb(250, 138, 47)">rechercher une conversation</b> dans la barre de recherche.</p>
+    <p style="font-size:1.3em; margin-top:1%;">- Vous pouvez <b style="color:rgb(250, 138, 47)">trier les conversations</b> en cliquant sur les boutons "Nom", "Nombre de participants",...</p>
+    <p style="font-size:1.3em; margin-top:1%;">- Vous pouvez <b style="color:rgb(250, 138, 47)">séléctionner les conversations</b> seules ou de groupes.</p>
   </div>
   <h2>Analyse des conversations</h2>
   <hr class="overview">
@@ -26,12 +30,12 @@
     </div>
   </div>
   <div class="sortBar">
-    <button class = "sortButton" style="width:25%; cursor:pointer;" (click)="correspondanceSort(0)">Name {{sortedChoices.name}}</button>
+    <button class = "sortButton" style="width:25%; cursor:pointer;" (click)="correspondanceSort(0)">Nom {{sortedChoices.name}}</button>
     <button class = "sortButton" style="width:15%; cursor:pointer;" (click)="correspondanceSort(5)">Nombre participants {{sortedChoices.nbrParticipant}}</button>
     <button class = "sortButton" style="width:15%; cursor:pointer;" (click)="correspondanceSort(1)">Messages {{sortedChoices.nbrMessage}}</button>
-    <button class = "sortButton" style="width:10%; cursor:pointer;" (click)="correspondanceSort(2)">Current Streak {{sortedChoices.currentStreak}}</button>
-    <button class = "sortButton" style="width:10%; cursor:pointer;" (click)="correspondanceSort(3)">Max Streak {{sortedChoices.maxStreak}}</button>
-    <button class = "sortButton" style="width:10%; cursor:pointer;" (click)="correspondanceSort(4)">Max Freeze {{sortedChoices.maxFreeze}}</button>
+    <button class = "sortButton" style="width:10%; cursor:pointer;" (click)="correspondanceSort(2)">Flammes {{sortedChoices.currentStreak}}</button>
+    <button class = "sortButton" style="width:10%; cursor:pointer;" (click)="correspondanceSort(3)">Éclairs {{sortedChoices.maxStreak}}</button>
+    <button class = "sortButton" style="width:10%; cursor:pointer;" (click)="correspondanceSort(4)">Flocon {{sortedChoices.maxFreeze}}</button>
     <button class = "sortButton" style="width:15%; cursor:pointer;" (click)="correspondanceSort(6)">Dernier message {{sortedChoices.lastMessage}}</button>
   </div>
 
