--- a/src/app/home-pannel-page/convs-pannel/one-conv-stats/one-conv-stats.component.html
+++ b/src/app/home-pannel-page/convs-pannel/one-conv-stats/one-conv-stats.component.html
@@ -1,13 +1,19 @@
 <div class="tooltipFirstRun" [ngStyle]="{'display':isOneConvStatFirstRun? 'Block' : 'None' }">
     <div class="enteteTooltip">
-      <h1>Statistiques globales de votre profil</h1>
+      <h1>Ma conversation</h1>
       <div class="close-container" (click)="closeTooltip()">
         <div class="leftright"></div>
         <div class="rightleft"></div>
         <label class="close">close</label>
       </div>
     </div>
-    <p>Ipsam vero urbem Byzantiorum fuisse refertissimam atque ornatissimam signis quis ignorat? Quae illi, exhausti sumptibus bellisque maximis, cum omnis Mithridaticos impetus totumque Pontum armatum affervescentem in Asiam atque erumpentem, ore repulsum et cervicibus interclusum suis sustinerent, tum, inquam, Byzantii et postea signa illa et reliqua urbis ornanemta sanctissime custodita tenuerunt.</p>
+    <p style="font-size:1.3em; margin-top:3%;">- <b style="color:rgb(250, 138, 47)">Cliquez sur un menu</b> sur la gauche pour l'analyser.</p>
+    <div style="display:flex;">
+        <p style="margin-top:0; font-size: 1.3em; margin-bottom:0">- Si vous ne comprenez pas un graphique, cliquez sur le </p><img style="height:4vh; margin-top: -1%; width: 2vw; margin-right: 0; margin-left: 1%; margin-bottom: 0; " src="https://image.flaticon.com/icons/svg/254/254059.svg"/>
+    </div>
+    <p style="font-size: 1.3em; margin-top:0;">pour avoir plus d'informations.</p>
+    <p style="font-size: 1.3em;">- L'affichage change selon le type de conversation : Groupe ou Duo.</p>
+
   </div>
 
 <div class="main">
