style mardi matin

--- a/src/app/file-drop-page/file-drop-page.component.scss
+++ b/src/app/file-drop-page/file-drop-page.component.scss
@@ -114,14 +114,13 @@ p {
   display:flex;
   text-align : center;
   justify-content: space-between;
-  margin-top:5%;
-  margin-left: 10%;
-  margin-right: 10%;
+  margin-left: 15%;
+  margin-right: 15%;
   margin-bottom:2%;
 }
 
 .logoLinkedin{
-  height:6vh;
+  height:4vh;
 }
 
 .oneLinkedin{
@@ -129,6 +128,10 @@ p {
   cursor:pointer;
   height:13%;
   
+}
+
+.oneLinkedin h3{
+  font-size:1em;
 }
 
 
@@ -685,7 +688,7 @@ hr.overview{
 // Select button 
 
 .buttonSelect {
-  background-color: rgb(250, 138, 47); /* Green */
+  background-color: rgb(250, 138, 47); 
   border: none;
   color: white;
   padding: 1% 2%;
@@ -708,3 +711,8 @@ hr.overview{
 .buttonSelect:hover {
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
 }
+
+
+
+
+
