--- a/src/app/home-pannel-page/convs-pannel/one-conv-stats/one-conv-stats.component.html
+++ b/src/app/home-pannel-page/convs-pannel/one-conv-stats/one-conv-stats.component.html
@@ -7,6 +7,7 @@
         <label class="close">close</label>
       </div>
     </div>
+    <p style="font-size:1.4em;">Analysez ici la conversation séléctionnée :</p>
     <p style="font-size:1.3em; margin-top:3%;">- <b style="color:rgb(250, 138, 47)">Cliquez sur un menu</b> sur la gauche pour l'analyser.</p>
     <div style="display:flex;">
         <p style="margin-top:0; font-size: 1.3em; margin-bottom:0">- Si vous ne comprenez pas un graphique, cliquez sur le </p><img style="height:4vh; margin-top: -1%; width: 2vw; margin-right: 0; margin-left: 1%; margin-bottom: 0; " src="https://image.flaticon.com/icons/svg/254/254059.svg"/>
