--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,8 +17,7 @@
 
     <div *ngIf="isReady">
       <div class="horizontalBar">
-        <img src="https://i.pinimg.com/originals/0b/73/51/0b7351f7b132512ea28fae9d5fff1bde.png"/>
-        <h1>StatMess</h1>
+        <h1 style="font-size : 3vh; margin-top:auto; margin-bottom:auto; margin-left:1%;">StatMess</h1>
       </div>
       <div class="cguPage" *ngIf="isCguVisible">
         <div class="wrapper" (click)="showHideCgu()">
@@ -36,7 +35,7 @@
         <app-file-drop-page></app-file-drop-page>
       </div>
       <div class="footer" *ngIf="!isCguVisible">
-        <h1 (click)="showHideCgu()" class="CGU">CGU</h1>
+        <h1 (click)="showHideCgu()" class="CGU">Condition générales d'utilisation</h1>
       </div>
     </div>
 </div>
