--- a/src/app/home-pannel-page/convs-pannel/convs-pannel.component.scss
+++ b/src/app/home-pannel-page/convs-pannel/convs-pannel.component.scss
@@ -613,7 +613,10 @@ label{
   transition-property: opacity;
   transition-duration: 1s;
   transition-timing-function: linear;
-  margin-bottom: -12%;
+  margin-bottom: -20%;
+  margin-left:auto;
+  margin-right:auto;
+  width:80%;
 }
 
 .enteteTooltip h1{
