--- a/src/app/home-pannel-page/own-stats-pannel/own-stats-pannel.component.scss
+++ b/src/app/home-pannel-page/own-stats-pannel/own-stats-pannel.component.scss
@@ -504,6 +504,24 @@ h2 {
   margin-top : 1%;
 }
 
+.selectDivision{
+  background:#1A1837;
+  color:white;
+  text-align:center;
+}
+
+.selectDivision p{
+  font-size: 1.2em;
+  padding-top: 0.5%;
+  margin-bottom: 1%;
+}
+
+.buttonMessage:hover {
+  background-color: rgb(250, 138, 47); 
+  color: #1A1837;
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
 #messageHide{
   background-color : #fff;
   position : relative;
@@ -928,7 +946,6 @@ label{
   position: -webkit-sticky;
   position: sticky;
   left: 5%;
-  width: 40%;
   color: #fff;
   top: 10vh;
   padding: 1%;
@@ -936,6 +953,9 @@ label{
   transition-duration: 1s;
   transition-timing-function: linear;
   margin-bottom:-11%;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
 
 .enteteTooltip h1{
