--- a/src/app/home-pannel-page/profil-pannel/profil-pannel.component.scss
+++ b/src/app/home-pannel-page/profil-pannel/profil-pannel.component.scss
@@ -175,7 +175,6 @@ label{
   position: -webkit-sticky;
   position: sticky;
   left: 5%;
-  width: 40%;
   color: #fff;
   top: 10vh;
   padding: 1%;
@@ -183,6 +182,9 @@ label{
   transition-duration: 1s;
   transition-timing-function: linear;
   margin-bottom: -12%;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
 
 .enteteTooltip h1{
