--- a/src/app/file-drop-page/file-drop-page.component.html
+++ b/src/app/file-drop-page/file-drop-page.component.html
@@ -83,13 +83,13 @@
               <p>Vous pouvez également la rejoindre depuis vos paramètres Facebook.</p>
             </div>
             <div class="imgSide">
-              <img src="https://zupimages.net/up/19/20/7r9m.png"
+              <img src="https://zupimages.net/up/19/21/muyw.png"
               class="imageTutorial2"/>
             </div>
           </div>
     <div class="oneStep">
       <div class="imgSide">
-        <img src="https://zupimages.net/up/19/20/32br.png" 
+        <img src="https://zupimages.net/up/19/21/svdi.png" 
         class="imageTutorial2"/>
       </div>
       <div class="textSide2" style="margin-left:1%">
@@ -106,19 +106,47 @@
       <div class="textSide2" style="margin-right:1%">
         <h1>3. Téléchargez vos messages.</h1>
         <hr class="overview">
-        <p>Après avoir attendu que Facebook créé votre dossier, vous pouvez télécharger vos messages ! <b>Vous serez notifié</b></p>
+        <p>Après avoir attendu que Facebook créé votre dossier, vous pouvez télécharger vos messages ! <b>Vous serez notifié.</b></p>
       </div>
       <div class="imgSide">
         <img src="https://zupimages.net/up/19/20/wed0.png" class="imageTutorial2"/>
+        <img src="https://zupimages.net/up/19/21/y1qr.png" id="flecheBas"/>
+        <img src="https://zupimages.net/up/19/20/g6x6.png" class="imageTutorial2"/>
+      </div>
+    </div>
+    <div class="oneStep">
+      <div class="imgSide">
+        <img src="https://zupimages.net/up/19/21/nfhf.png" 
+        class="imageTutorial2"/>
+      </div>
+      <div class="textSide2" style="margin-left:1%">
+        <h1>4. Extraire votre dossier</h1>
+        <hr class="overview">
+        <p style="margin-bottom:1%">Rendez-vous dans votre dossier “Téléchargements” et <b>décompressez</b> facebook-PrenomNom.zip.</p>
+        <p style="margin-bottom:1%">Vous pouvez utiliser pour cela n’importe quel logiciel de décompression, par exemple <a class="clickHere" href="https://www.7-zip.fr/" target="_blank">7zip</a>. </p>
+      </div>
+    </div>
+    <div class="oneStep">
+      <div class="textSide2" style="margin-right:1%">
+        <h1>5. Lancez l'analyse Statmess !</h1>
+        <hr class="overview">
+        <p>Vous n’avez plus qu’à sélectionner votre dossier</p>
+        <p>Et... <b>C’est parti !</b></p>
+      </div>
+      <div class="imgSide">
+        <img src="https://zupimages.net/up/19/21/7rvj.png" id="boutonUpload"/>
+        <img src="https://zupimages.net/up/19/21/y1qr.png" id="flecheBas"/>
+        <img src="https://zupimages.net/up/19/21/2sj6.png" class="imageTutorial2"/>
       </div>
     </div>
     <div style="box-shadow : 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
-      <h1>Vous pouvez télécharger votre dossier et utiliser StatMess</h1>
+      <h1>Enjoy StatMess !</h1>
       <hr class="overview">
+      <p style="text-align:left">PS : Sur Chrome, vous aurez ce message, c'est normal ;)</p>
       <div class="imgSide">
-        <img src="https://zupimages.net/up/19/20/g6x6.png" class="imageTutorial" style="width:100%"/>
+        <img src="https://zupimages.net/up/19/21/3kzt.png" class="imageTutorial" style="margin-top:3%; margin-bottom:3%; height:15%; width:50%"/>
       </div>
-      <p style="text-align:center">Nous vous souhaitons une bonne utilisation et n'oubliez pas de donner votre avis</p>
+      <p style="text-align:center">Nous vous souhaitons une bonne utilisation et n'oubliez pas de donner votre avis.</p>
       <p style="text-align:right; margin-top:2%; margin-bottom:1%; margin-right:3%">L'équipe StatMess</p>
     </div>
   </div>
