--- a/src/app/file-drop-page/file-drop-page.component.scss
+++ b/src/app/file-drop-page/file-drop-page.component.scss
@@ -86,6 +86,20 @@ p {
   width: 35vw;
 }
 
+#flecheBas{
+  height: 5%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#boutonUpload{
+  height: 15%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .dropButton{
   width:20vw;
   margin-left: 39.5%;
